@@ -1,0 +1,30 @@
+#!/bin/sh
+# -*- coding: utf-8 -*-
+# Copyright (C) by the Spot authors, see the AUTHORS file for details.
+#
+# This file is part of Spot, a model checking library.
+#
+# Spot is free software; you can redistribute it and/or modify it
+# under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 3 of the License, or
+# (at your option) any later version.
+#
+# Spot is distributed in the hope that it will be useful, but WITHOUT
+# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
+# or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public
+# License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+. ./defs
+set -e
+
+genltl --dac-p --eh-p --hkrss-p --sb-p --sejk-p \
+       --stats='%F:%L,%f' > formulas.txt
+ltlfilt --to-delta2 --delta2 -F formulas.txt/2 > res.txt
+ltlfilt --to-delta2 -v --delta2 -F formulas.txt/2 --stats='%<' || :
+test `wc -l < formulas.txt` -eq `wc -l < res.txt`
+
+ltlcross -F formulas.txt/2 \
+         'ltl2tgba' 'ltlfilt --to-delta2 -f %f | ltl2tgba -G >%O'
